--- a/style.css
+++ b/style.css
@@ -35,6 +35,9 @@
     --spacing-l: 2rem;
     --spacing-xl: 2.5rem;
 
+    --brd-radius-responsive: 0.3125rem;
+    --box-padding-responsive: 1.5rem;
+
     --brd-radius-mobile: 0.3125rem;
     /* 5px */
     --brd-radius-desktop: var(--spacing-xxs);
@@ -77,7 +80,7 @@ body {
 .card {
     display: grid;
     grid-template-columns: 1fr;
-    border-radius: var(--brd-radius-mobile);
+    border-radius: var(--brd-radius-responsive);
     overflow: hidden;
     box-shadow: 0px 15px 30px 0px hsla(212, 100%, 34%, 0.15);
 }
@@ -85,26 +88,29 @@ body {
 
 .card_box_top {
     background-color: var(--clr-white);
-    padding: var(--box-padding-mobile);
+    padding: var(--box-padding-responsive);
     /* display: grid;
     gap: 1.5rem; */
+    transition: opacity ease-out 250ms
 }
 
 .card_box_second {
     background-color: var(--clr-cyan);
-    padding: var(--box-padding-mobile);
+    padding: var(--box-padding-responsive);
     display: grid;
     gap: 1rem;
     font-size: 1rem;
     color: var(--clr-white);
+    transition: opacity ease-out 250ms
 }
 
 .card_box_third {
     display: grid;
     gap: 1.125rem;
     background-color: var(--clr-light-cyan);
-    padding: var(--box-padding-mobile);
+    padding: var(--box-padding-responsive);
     color: var(--clr-white);
+    transition: opacity ease-out 250ms
 }
 
 .card_box_title {
@@ -170,8 +176,9 @@ body {
 .button {
     border: none;
     background-color: var(--clr-yellow);
-    border-radius: var(--brd-radius-mobile);
+    border-radius: var(--brd-radius-responsive);
     padding: 0.875rem 0;
+    cursor: pointer;
     color: var(--clr-white);
     font-weight: var(--fw-l);
     transition: 200ms;
@@ -181,21 +188,50 @@ body {
     transform: scale(0.95);
 }
 
+/* .card_box_top,
+.card_box_second,
+.card_box_third:is(:hover, :focus) {
+    background-color: blueviolet;
+} */
+
+:is(.card_box_top, .card_box_second, .card_box_third):is(:hover, :focus) {
+    /* background-color: var(--clr-light-gray); */
+    opacity: 0.7;
+    /* text-shadow: 0.05rem 0.01rem; */
+    font-weight: 700;
+
+}
+
 .card_box_list {
     font-size: var(--fs-s);
     list-style: none;
     padding: 0;
 }
 
-@media (min-width: 550px) {
+@media (min-width: 34rem) {
+    :root {
+        --brd-radius-responsive: 0.5rem;
+        --box-padding-responsive: 2.5rem;
+    }
+
     .card {
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 0.9fr 1.2fr;
         max-width: 39.6875rem;
     }
 
     .card_box_top {
         grid-column: span 2;
+    }
+
+
+    .flex-group-top {
+        gap: var(--spacing-xs);
+        text-wrap: balance;
+    }
+
+    .flex-group-top>.card_box_regular_p {
+        padding-bottom: 0;
     }
 }
 
